Fix crash on wrong indexes in RemoveGutter in KnifeTool

Before this commit, mergeShapesWithGutter would expect
the VectorPath-based indexes, while getLineSegmentIndexes...
would provide QpainterPath-based indexes. This commit
ensures that they're not mixed up, and adds additional checks
in the code to prevent a crash.

BUG:512601